--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,27 +1,43 @@
 {% extends "base.html" %}
 {% block page_title %}Sign in · Eduvos Parent Portal{% endblock %}
 {% block content %}
-<div class="vstack">
-  <div class="section-title">Sign in</div>
-  <div class="card">
-    <form method="post" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+<div class="auth-wrap">
+  <div class="card elevated auth-card">
+    <div class="vstack">
+      <div class="section-title">Sign in</div>
+
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert {{ message.tags|default:'info' }}">{{ message }}</div>
+        {% endfor %}
       {% endif %}
-      <div class="form-stack">
-        <input type="text" name="login" placeholder="Email" required class="input">
-        <input type="password" name="password" placeholder="Password" required class="input">
-        <label>
-          <input type="checkbox" name="remember" value="on"> Remember me
-        </label>
-        <button type="submit" class="tab">Sign in</button>
+
+      {% if form and form.non_field_errors %}
+        <div class="alert error">
+          {% for err in form.non_field_errors %}{{ err }}{% if not forloop.last %}<br>{% endif %}{% endfor %}
+        </div>
+      {% endif %}
+
+      <form method="post" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+        {% endif %}
+        <div class="form-stack">
+          <input type="text" name="login" placeholder="Email" required class="input" autocomplete="email">
+          <input type="password" name="password" placeholder="Password" required class="input" autocomplete="current-password">
+          <label>
+            <input type="checkbox" name="remember" value="on"> Remember me
+          </label>
+          <button type="submit" class="tab">Sign in</button>
+        </div>
+      </form>
+
+      <div class="mt-3">
+        <a class="tab" href="{% url 'account_reset_password' %}">Forgot password?</a>
+        <a class="tab" href="{% url 'account_signup' %}">Create an account</a>
       </div>
-    </form>
-    <div class="mt-3">
-      <a class="tab" href="{% url 'account_reset_password' %}">Forgot password?</a>
-      <a class="tab" href="{% url 'account_signup' %}">Create an account</a>
     </div>
   </div>
-</div>
+  </div>
 {% endblock %}
