--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="header-inner">
-      <div class="brand">Eduvos Parent Portal</div>
+  <div class="brand"><a href="{% url 'home' %}" aria-label="Go to home">Eduvos Parent Portal</a></div>
       <div class="search">
         <input type="search" placeholder="Search links..."/>
       </div>
@@ -19,6 +19,7 @@
       </div>
       <div class="hstack">
         {% if user.is_authenticated %}
+          <a class="tab" href="{% url 'home' %}">Home</a>
           <a class="tab" href="{% url 'account_logout' %}">Logout</a>
         {% else %}
           <a class="tab" href="{% url 'account_login' %}">Login</a>
