--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
       </div>
       <div>
         <a class="tab" href="{{ prefs_url }}">Email preferences</a>
+        <a class="tab" href="{% url 'account_email' %}">Manage emails</a>
         <a class="tab" href="{{ announcements_url }}">Announcements</a>
       </div>
     </div>
