--- a/templates/financials/index.html
+++ b/templates/financials/index.html
@@ -6,7 +6,9 @@
   {% if not active_student_id %}
     <div class="card"><div class="muted">Select a student to view invoices and payments.</div></div>
   {% else %}
-    <div class="card"><div class="muted">Showing financials for student ID {{ active_student_id }}. (Coming soon)</div></div>
+    {% if balance_status %}
+      <div class="card"><div>{{ balance_status }}</div></div>
+    {% endif %}
   {% endif %}
 </div>
 {% endblock %}
